--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.0",
     "nodemon": "^2.0.21",
+    "path": "^0.12.7",
     "sequelize": "^6.29.0",
     "sequelize-cli": "^6.6.0"
   }
